<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Clock+</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_ringtone">Clock+</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_edit_alarm">EditAlarmActivity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="default_alarm_time_12h">12:00 AM</string>
    <string name="default_alarm_time_24h">00:00</string>
    <string name="title_snoozing_until">Snoozing until %1$s</string>
    <string name="dismiss_now">Dismiss now</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="done_snoozing">Done snoozing</string>
    <string name="alarm_set_for">Alarm set for %1$s from now.</string>
    <string name="day_hour_and_minute">1 day, 1 hour, and 1 minute</string>
    <string name="days_hour_and_minute">%1$d days, 1 hour, and 1 minute</string>
    <string name="days_hours_and_minute">%1$d days, %2$d hours, and 1 minute</string>
    <string name="days_hour_and_minutes">%1$d days, 1 hours, and %3$d minutes</string>
    <string name="days_hours_and_minutes">%1$d days, %2$d hours, and %3$d minutes</string>
    <string name="day_hours_and_minute">1 day, %2$d hours, and 1 minute</string>
    <string name="day_hours_and_minutes">1 day, %2$d hours, and %3$d minutes</string>
    <string name="day_hour_and_minutes">1 day, 1 hour, and %3$d minutes</string>
    <string name="day_and_hour">1 day and 1 hour</string>
    <string name="days_and_hour">%1$d days and 1 hour</string>
    <string name="day_and_hours">1 day and %2$d hours</string>
    <string name="days_and_hours">%1$d days and %2$d hours</string>
    <string name="day_and_minute">1 day and 1 minute</string>
    <string name="days_and_minute">%1$d days and 1 minute</string>
    <string name="day_and_minutes">1 day and %3$d minutes</string>
    <string name="days_and_minutes">%1$d days and %3$d minutes</string>
    <string name="hour_and_minute">1 hour and 1 minute</string>
    <string name="hour_and_minutes">1 hour and %3$d minutes</string>
    <string name="hours_and_minute">%2$d hours and 1 minute</string>
    <string name="hours_and_minutes">%2$d hours and %3$d minutes</string>
    <string name="day">1 day</string>
    <string name="days">%1$d days</string>
    <string name="hour">1 hour</string>
    <string name="hours">%2$d hours</string>
    <string name="minute">1 minute</string>
    <string name="minutes">%3$d minutes</string>
    <string name="less_than_one_minute">less than 1 minute</string>
    <string name="abbrev_days_hours_and_minutes">%1$dd %2$dh %3$dm</string>
    <string name="abbrev_days_and_hours">%1$dd %2$dh</string>
    <string name="abbrev_days_and_minutes">%1$dd %3$dm</string>
    <string name="abbrev_hours_and_minutes">%2$dh %3$dm</string>
    <string name="abbrev_days">%1$dd</string>
    <string name="abbrev_hours">%2$dh</string>
    <string name="abbrev_minutes">%3$dm</string>
    <string name="abbrev_less_than_one_minute">&lt;1m</string>
    <string name="upcoming_alarm_dismissed">%1$s alarm dismissed.</string>
    <string name="upcoming_alarm">Upcoming alarm</string>
    <string name="alarm">Alarm</string>
    <string name="missed_alarm">Missed alarm</string>
    <string name="snackbar_item_deleted">%1$s deleted</string>
    <string name="snackbar_undo_item_deleted">Undo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="every_day">Every day</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="left_alt_24hr">:00</string>
    <string name="right_alt_24hr">:30</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_create_timer">CreateTimerActivity</string>
    <string name="timer">Timer</string>
    <string name="times_up">Time\'s up</string>
    <string name="add_one_minute">Add 1 minute</string>
    <string name="stop">Stop</string>
    <string name="timer_expired">Timer expired</string>
    <string name="add_one_minute_icon_text">+60s</string>
    <string name="alarm_auto_silenced_text">You missed your alarm.</string>
    <string name="timer_auto_silenced_text">Your timer expired.</string>
    <string name="label">Label</string>
    <string name="ringtones">Ringtones</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="empty_alarms_container">No alarms added</string>
    <string name="empty_timers_container">No timers added</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="lap">Lap</string>
    <string name="stopwatch_and_lap_number">Stopwatch \u002d Lap %1$d</string>
    <string name="negative_duration">\u2212<xliff:g id="time" example="1:14">%1$s</xliff:g></string>
</resources>