<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".editalarm.EditAlarmActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_alignParentTop="true"
        android:elevation="4dp"/>

    <LinearLayout
        android:id="@+id/footer_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarStyle"
        android:elevation="4dp"
        android:layoutDirection="rtl"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            style="?borderlessButtonStyle"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="?borderlessButtonStyle"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/footer_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <!-- TODO: Find out how to get a touch ripple; foreground attr didn't work -->
                <EditText
                    android:id="@+id/input_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    android:background="@android:color/transparent"
                    android:hint="@string/default_alarm_time_12h"
                    android:textSize="56sp"
                    android:layout_toStartOf="@id/on_off"
                    android:inputType="time"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ToggleButton
                    android:id="@+id/day0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"/>

                <ToggleButton
                    android:id="@+id/day1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

                <ToggleButton
                    android:id="@+id/day2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

                <ToggleButton
                    android:id="@+id/day3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

                <ToggleButton
                    android:id="@+id/day4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

                <ToggleButton
                    android:id="@+id/day5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

                <ToggleButton
                    android:id="@+id/day6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:background="?selectableItemBackground"/>

            </LinearLayout>

            <EditText
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@android:color/transparent"
                android:hint="Add label"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/ringtone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="Ringtone"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/vibrate"/>

                <CheckBox
                    android:id="@id/vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Vibrate"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>